@@ -1,3 +1,8 @@
+(10/31/07)
+
+*** Added an external mapper to allow invoking a script to do the
+    actual mapping
+
 (10/08/07)
 
 *** Added readData function
